--- a/index.html
+++ b/index.html
@@ -1,1 +1,255 @@
-Hello World
+<!DOCTYPE html>
+<html lang="eng">
+	<head>
+		<title>Andrei Catalin Coman</title>
+		<meta charset="utf-8">
+		<meta name="description" content="Andrei Catalin Coman's personal website">
+		<meta name="author" content="Andrei Catalin Coman">
+		<meta name="viewport" content="initial-scale=1.0, width=device-width" />
+		<!-- bootstrap stylesheet -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<!-- font awesome -->
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+		<!-- google fonts -->
+		<link href="https://fonts.googleapis.com/css?family=Varela+Round|Montserrat:100,200,300,400" rel="stylesheet">
+		<!-- stylesheet -->
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+	</head>
+	<body>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-3">
+					<div class="row">
+						<img src="res/andrei.jpg" class="rounded img-fluid mx-auto d-block my-image">
+					</div>
+					<div class="row">
+						<div class="col-sm-12 text-center my-name">
+							Andrei C. Coman
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-12">
+							<div class="my-social">
+								<a href="https://twitter.com/AndreiCComan" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
+							</div>
+							<div class="my-social">
+								<a href="https://www.linkedin.com/in/andrei-catalin-coman-226026137/" target="_blank"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
+							</div>
+							<div class="my-social">
+								<a href="http://github.com/AndreiCComan/" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+							</div>
+							<div class="my-social">
+								<a href="https://scholar.google.it/citations?user=LZLaA4cAAAAJ&hl=it&oi=ao" target="_blank"><i class="fab fa-google"></i> Scholar</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-9">
+					<div class="row my-section-title">
+						ABOUT
+					</div>
+					<div class="row my-card my-section-content">
+						<div>
+							I'm Master Student in the Department of Information Engineering and Computer Science (DISI) at University of Trento. I work under the supervision of Professor Giuseppe Riccardi in the SiSLab group.
+						</div>
+						<br/>
+						<div>
+							<b>
+							Interests:
+							</b>
+						<br/>
+							<ul>
+								<li>Language Understanding Systems</li>
+								<li>Dialog Systems</li>
+								<li>Natural Language Processing</li>
+								<li>Deep Learning</li>
+							</ul>
+						</div>
+					</div>
+					<div class="row my-section-title">
+						EDUCATION
+					</div>
+					<div class="row my-card my-section-content">
+						<div class="col-sm-12">
+							<div class="row my-section-content-element">
+								<div class="col-sm-2 col-4"><img src="res/unitn.png" class="rounded img-fluid my-section-content-image"></div>
+								<div class="col-sm-10 col-8">
+									<div class="my-section-content-first">
+										University of Trento
+									</div>
+									<div class="my-section-content-second">
+										Master of Science - MS, Computer Science (Data Science)
+									</div>
+									<div class="my-section-content-third">
+										Sep 2017 - Sep 2019
+									</div>
+									<div class="my-section-content-third">
+										Trento, Italy
+									</div>
+								</div>
+							</div>
+							<div class="row my-section-content-element">
+								<div class="col-sm-2 col-4"><img src="res/unitn.png" class="rounded img-fluid my-section-content-image"></div>
+								<div class="col-sm-10 col-8">
+									<div class="my-section-content-first">
+										University of Trento
+									</div>
+									<div class="my-section-content-second">
+										Bachelor's degree, Computer Science
+									</div>
+									<div class="my-section-content-third">
+										Sep 2014 - Sep 2017
+									</div>
+									<div class="my-section-content-third">
+										Trento, Italy
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row my-section-title">
+						EXPERIENCES
+					</div>
+					<div class="row my-card my-section-content">
+						<div class="col-sm-12">
+							<div class="row my-section-content-element">
+								<div class="col-sm-2 col-4"><img src="res/unitn.png" class="rounded img-fluid my-section-content-image"></div>
+								<div class="col-sm-10 col-8">
+									<div class="my-section-content-first">
+										Unversity of Trento
+									</div>
+									<div class="my-section-content-second">
+										Thesis (SiSLab Lab)
+									</div>
+									<div class="my-section-content-second">
+										Natural Language Understading
+									</div>
+									<div class="my-section-content-third">
+										Mar 2019 - Sep 2019
+									</div>
+									<div class="my-section-content-third">
+										Trento, Italy
+									</div>
+								</div>
+							</div>
+							<div class="row my-section-content-element">
+								<div class="col-sm-2 col-4"><img src="res/naist.png" class="rounded img-fluid my-section-content-image"></div>
+								<div class="col-sm-10 col-8">
+									<div class="my-section-content-first">
+										Nara Institute of Science and Technology
+									</div>
+									<div class="my-section-content-second">
+										Internship (AHC Lab)
+									</div>
+									<div class="my-section-content-second">
+										Incremental Language Processing
+									</div>
+									<div class="my-section-content-third">
+										Dec 2018 - Feb 2019
+									</div>
+									<div class="my-section-content-third">
+										Nara, Japan
+									</div>
+								</div>
+							</div>
+							<div class="row my-section-content-element">
+								<div class="col-sm-2 col-4"><img src="res/fbk.jpg" class="rounded img-fluid my-section-content-image"></div>
+								<div class="col-sm-10 col-8">
+									<div class="my-section-content-first">
+										Fondazione Bruno Kessler
+									</div>
+									<div class="my-section-content-second">
+										Part Time: Software Developer and Researcher (eHealth Lab)
+									</div>
+									<div class="my-section-content-second">
+										Virtual Coach development
+									</div>
+									<div class="my-section-content-third">
+										Aug 2018 - Nov 2018
+									</div>
+									<div class="my-section-content-third">
+										Trento, Italy
+									</div>
+								</div>
+							</div>
+							<div class="row my-section-content-element">
+								<div class="col-sm-2 col-4"><img src="res/fbk.jpg" class="rounded img-fluid my-section-content-image"></div>
+								<div class="col-sm-10 col-8">
+									<div class="my-section-content-first">
+										Fondazione Bruno Kessler
+									</div>
+									<div class="my-section-content-second">
+										Thesis (Future Media Lab)
+									</div>
+									<div class="my-section-content-second">
+										Recommending Followers To Improve Reputation On Social Media
+									</div>
+									<div class="my-section-content-third">
+										Jun 2018 - Sep 2018
+									</div>
+									<div class="my-section-content-third">
+										Trento, Italy
+									</div>
+								</div>
+							</div>
+							<div class="row my-section-content-element">
+								<div class="col-sm-2 col-4"><img src="res/fbk.jpg" class="rounded img-fluid my-section-content-image"></div>
+								<div class="col-sm-10 col-8">
+									<div class="my-section-content-first">
+										Fondazione Bruno Kessler
+									</div>
+									<div class="my-section-content-second">
+										Thesis (Future Media Lab)
+									</div>
+									<div class="my-section-content-second">
+										Automated Testing using BDT (Behaviour Driven Testing)
+									</div>
+									<div class="my-section-content-third">
+										Mar 2017 - Jun 2017
+									</div>
+									<div class="my-section-content-third">
+										Trento, Italy
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row my-section-title">
+						PUBBLICATIONS
+					</div>
+					<div class="row my-card my-section-content">
+						<div class="col-sm-12">
+							<div class="row my-section-content-element">
+								<div class="col-sm-2 col-4 text-center"><a href="http://ceur-ws.org/Vol-2263/paper021.pdf" target="_blank" class="my-section-content-pdf"><i class="fas fa-download"></i> <b>.pdf</b></a></div>
+								<div class="col-sm-10 col-8">
+									<div class="my-section-content-second text-justify">
+										Coman, A. C., Nechaev, Y., & Zara, G. (2018). <i>Predicting Emoji Exploiting Multimodal Data: FBK Participation in ITAmoji Task</i>. In EVALITA 2018 Sixth Evaluation Campaign of Natural Language Processing and Speech Tools for Italian.
+									</div>
+								</div>
+							</div>
+							<div class="row my-section-content-element">
+								<div class="col-sm-2 col-4 text-center"><a href="http://ceur-ws.org/Vol-2244/paper_11.pdf" target="_blank" class="my-section-content-pdf"><i class="fas fa-download"></i> <b>.pdf</b></a></div>
+								<div class="col-sm-10 col-8">
+									<div class="my-section-content-second text-justify">
+										Coman, A. C., Zara, G., Nechaev, Y., Barlacchi, G., & Moschitti, A. (2018). <i>Exploiting Deep Neural Networks for Tweet-based Emoji Prediction</i>. In International Workshop on Semantic Evaluation (Vol. 4, p. 1).
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row my-footer">
+				<div class="col-12 text-center">
+					You can fork this website on my GitHub account
+				</div>
+			</div>
+		</div>
+		<!-- bootstrap scripts -->
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+		<!-- script -->
+		<script src="js/script.js"></script>
+	</body>
+</html>
