--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						ABOUT
 					</div>
 					<div class="row my-card my-section-content">
-						<div>
+						<div class="text-justify">
 							I'm Master Student in the Department of Information Engineering and Computer Science (DISI) at University of Trento. I work under the supervision of Professor Giuseppe Riccardi in the SiSLab group.
 						</div>
 						<br/>
