--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					</div>
 					<div class="row my-card my-section-content">
 						<div class="text-justify">
-							I'm Master Student in the Department of Information Engineering and Computer Science (DISI) at University of Trento. I work under the supervision of Professor Giuseppe Riccardi in the SiSLab group.
+							I'm a Master Student in the Department of Information Engineering and Computer Science (DISI) at University of Trento. I work under the supervision of Professor Giuseppe Riccardi in the SiSLab group.
 						</div>
 						<br/>
 						<div>
