--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 										University of Trento
 									</div>
 									<div class="my-section-content-second">
-										Bachelor's degree, Computer Science
+										Bachelor of Science - BS, Computer Science
 									</div>
 									<div class="my-section-content-third">
 										Sep 2014 - Sep 2017
@@ -199,7 +199,7 @@
 										Fondazione Bruno Kessler
 									</div>
 									<div class="my-section-content-second">
-										Thesis (Future Media Lab)
+										Internship (Future Media Lab)
 									</div>
 									<div class="my-section-content-second">
 										Automated Testing using BDT (Behaviour Driven Testing)
