--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 										Thesis (SiSLab Lab)
 									</div>
 									<div class="my-section-content-second">
-										Natural Language Understading
+										Natural Language Understanding
 									</div>
 									<div class="my-section-content-third">
 										Mar 2019 - Sep 2019
@@ -232,6 +232,14 @@
 								<div class="col-sm-10 col-8">
 									<div class="my-section-content-second text-justify">
 										Coman, A. C., Zara, G., Nechaev, Y., Barlacchi, G., & Moschitti, A. (2018). <i>Exploiting Deep Neural Networks for Tweet-based Emoji Prediction</i>. In International Workshop on Semantic Evaluation (Vol. 4, p. 1).
+									</div>
+								</div>
+							</div>
+							<div class="row my-section-content-element">
+								<div class="col-sm-2 col-4 text-center"><a href="https://arxiv.org/pdf/1905.11806.pdf" target="_blank" class="my-section-content-pdf"><i class="fas fa-download"></i> <b>.pdf</b></a></div>
+								<div class="col-sm-10 col-8">
+									<div class="my-section-content-second text-justify">
+										Coman, A. C., Yoshino, K., Murase, Y., Nakamura, S., & Riccardi, G. (2019). <i>An Incremental Turn-Taking Model For Task-Oriented Dialog Systems</i>. arXiv preprint arXiv:1905.11806.
 									</div>
 								</div>
 							</div>
