--- a/index.html
+++ b/index.html
@@ -215,15 +215,15 @@
 						</div>
 					</div>
 					<div class="row my-section-title">
-						PUBBLICATIONS
+						PUBLICATIONS
 					</div>
 					<div class="row my-card my-section-content">
 						<div class="col-sm-12">
 							<div class="row my-section-content-element">
-								<div class="col-sm-2 col-4 text-center"><a href="http://ceur-ws.org/Vol-2263/paper021.pdf" target="_blank" class="my-section-content-pdf"><i class="fas fa-download"></i> <b>.pdf</b></a></div>
+								<div class="col-sm-2 col-4 text-center"><a href="https://arxiv.org/pdf/1905.11806.pdf" target="_blank" class="my-section-content-pdf"><i class="fas fa-download"></i> <b>.pdf</b></a></div>
 								<div class="col-sm-10 col-8">
 									<div class="my-section-content-second text-justify">
-										Coman, A. C., Nechaev, Y., & Zara, G. (2018). <i>Predicting Emoji Exploiting Multimodal Data: FBK Participation in ITAmoji Task</i>. In EVALITA 2018 Sixth Evaluation Campaign of Natural Language Processing and Speech Tools for Italian.
+										Coman, A. C., Yoshino, K., Murase, Y., Nakamura, S., & Riccardi, G. (2019). <i>An Incremental Turn-Taking Model For Task-Oriented Dialog Systems</i>. arXiv preprint arXiv:1905.11806.
 									</div>
 								</div>
 							</div>
@@ -236,10 +236,10 @@
 								</div>
 							</div>
 							<div class="row my-section-content-element">
-								<div class="col-sm-2 col-4 text-center"><a href="https://arxiv.org/pdf/1905.11806.pdf" target="_blank" class="my-section-content-pdf"><i class="fas fa-download"></i> <b>.pdf</b></a></div>
+								<div class="col-sm-2 col-4 text-center"><a href="http://ceur-ws.org/Vol-2263/paper021.pdf" target="_blank" class="my-section-content-pdf"><i class="fas fa-download"></i> <b>.pdf</b></a></div>
 								<div class="col-sm-10 col-8">
 									<div class="my-section-content-second text-justify">
-										Coman, A. C., Yoshino, K., Murase, Y., Nakamura, S., & Riccardi, G. (2019). <i>An Incremental Turn-Taking Model For Task-Oriented Dialog Systems</i>. arXiv preprint arXiv:1905.11806.
+										Coman, A. C., Nechaev, Y., & Zara, G. (2018). <i>Predicting Emoji Exploiting Multimodal Data: FBK Participation in ITAmoji Task</i>. In EVALITA 2018 Sixth Evaluation Campaign of Natural Language Processing and Speech Tools for Italian.
 									</div>
 								</div>
 							</div>
