--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div class="row">
 				<div class="col-sm-3">
 					<div class="row">
-						<img src="res/andrei.jpg" class="rounded img-fluid mx-auto d-block my-image">
+						<img src="res/andrei.jpg" class="rounded img-fluid mx-auto d-block my-image" data-tilt>
 					</div>
 					<div class="row">
 						<div class="col-sm-12 text-center my-name">
@@ -45,7 +45,7 @@
 					</div>
 				</div>
 				<div class="col-sm-9">
-					<div class="row my-section-title">
+					<div class="row my-section-title" data-tilt>
 						ABOUT
 					</div>
 					<div class="row my-card my-section-content">
@@ -60,20 +60,20 @@
 							</b>
 						<br/>
 							<ul>
+								<li>Natural Language Processing</li>
 								<li>Language Understanding Systems</li>
 								<li>Dialog Systems</li>
-								<li>Natural Language Processing</li>
 								<li>Deep Learning</li>
 							</ul>
 						</div>
 					</div>
-					<div class="row my-section-title">
+					<div class="row my-section-title" data-tilt>
 						EDUCATION
 					</div>
 					<div class="row my-card my-section-content">
 						<div class="col-sm-12">
 							<div class="row my-section-content-element">
-								<div class="col-sm-2 col-4"><img src="res/unitn.png" class="rounded img-fluid my-section-content-image"></div>
+								<div class="col-sm-2 col-4"><img src="res/unitn.png" class="rounded img-fluid my-section-content-image" data-tilt></div>
 								<div class="col-sm-10 col-8">
 									<div class="my-section-content-first">
 										University of Trento
@@ -82,7 +82,7 @@
 										Master of Science - MS, Computer Science (Data Science)
 									</div>
 									<div class="my-section-content-third">
-										Sep 2017 - Sep 2019
+										Sep 2017 - Mar 2020
 									</div>
 									<div class="my-section-content-third">
 										Trento, Italy
@@ -90,7 +90,7 @@
 								</div>
 							</div>
 							<div class="row my-section-content-element">
-								<div class="col-sm-2 col-4"><img src="res/unitn.png" class="rounded img-fluid my-section-content-image"></div>
+								<div class="col-sm-2 col-4"><img src="res/unitn.png" class="rounded img-fluid my-section-content-image" data-tilt></div>
 								<div class="col-sm-10 col-8">
 									<div class="my-section-content-first">
 										University of Trento
@@ -108,13 +108,13 @@
 							</div>
 						</div>
 					</div>
-					<div class="row my-section-title">
+					<div class="row my-section-title" data-tilt>
 						EXPERIENCES
 					</div>
 					<div class="row my-card my-section-content">
 						<div class="col-sm-12">
 							<div class="row my-section-content-element">
-								<div class="col-sm-2 col-4"><img src="res/unitn.png" class="rounded img-fluid my-section-content-image"></div>
+								<div class="col-sm-2 col-4"><img src="res/unitn.png" class="rounded img-fluid my-section-content-image" data-tilt></div>
 								<div class="col-sm-10 col-8">
 									<div class="my-section-content-first">
 										Unversity of Trento
@@ -126,7 +126,7 @@
 										Natural Language Understanding
 									</div>
 									<div class="my-section-content-third">
-										Mar 2019 - Sep 2019
+										Mar 2019 - Mar 2020
 									</div>
 									<div class="my-section-content-third">
 										Trento, Italy
@@ -134,7 +134,7 @@
 								</div>
 							</div>
 							<div class="row my-section-content-element">
-								<div class="col-sm-2 col-4"><img src="res/naist.png" class="rounded img-fluid my-section-content-image"></div>
+								<div class="col-sm-2 col-4"><img src="res/naist.png" class="rounded img-fluid my-section-content-image" data-tilt></div>
 								<div class="col-sm-10 col-8">
 									<div class="my-section-content-first">
 										Nara Institute of Science and Technology
@@ -154,7 +154,7 @@
 								</div>
 							</div>
 							<div class="row my-section-content-element">
-								<div class="col-sm-2 col-4"><img src="res/fbk.jpg" class="rounded img-fluid my-section-content-image"></div>
+								<div class="col-sm-2 col-4"><img src="res/fbk.jpg" class="rounded img-fluid my-section-content-image" data-tilt></div>
 								<div class="col-sm-10 col-8">
 									<div class="my-section-content-first">
 										Fondazione Bruno Kessler
@@ -174,7 +174,7 @@
 								</div>
 							</div>
 							<div class="row my-section-content-element">
-								<div class="col-sm-2 col-4"><img src="res/fbk.jpg" class="rounded img-fluid my-section-content-image"></div>
+								<div class="col-sm-2 col-4"><img src="res/fbk.jpg" class="rounded img-fluid my-section-content-image" data-tilt></div>
 								<div class="col-sm-10 col-8">
 									<div class="my-section-content-first">
 										Fondazione Bruno Kessler
@@ -194,7 +194,7 @@
 								</div>
 							</div>
 							<div class="row my-section-content-element">
-								<div class="col-sm-2 col-4"><img src="res/fbk.jpg" class="rounded img-fluid my-section-content-image"></div>
+								<div class="col-sm-2 col-4"><img src="res/fbk.jpg" class="rounded img-fluid my-section-content-image" data-tilt></div>
 								<div class="col-sm-10 col-8">
 									<div class="my-section-content-first">
 										Fondazione Bruno Kessler
@@ -215,13 +215,13 @@
 							</div>
 						</div>
 					</div>
-					<div class="row my-section-title">
+					<div class="row my-section-title" data-tilt>
 						PUBLICATIONS
 					</div>
 					<div class="row my-card my-section-content">
 						<div class="col-sm-12">
 							<div class="row my-section-content-element">
-								<div class="col-sm-2 col-4 text-center"><a href="https://arxiv.org/pdf/1905.11806.pdf" target="_blank" class="my-section-content-pdf"><i class="fas fa-download"></i> <b>.pdf</b></a></div>
+								<div class="col-sm-2 col-4 text-center" data-tilt><a href="https://arxiv.org/pdf/1905.11806.pdf" target="_blank" class="my-section-content-pdf"><i class="fas fa-download"></i> <b>.pdf</b></a></div>
 								<div class="col-sm-10 col-8">
 									<div class="my-section-content-second text-justify">
 										Coman, A. C., Yoshino, K., Murase, Y., Nakamura, S., & Riccardi, G. (2019). <i>An Incremental Turn-Taking Model For Task-Oriented Dialog Systems</i>. arXiv preprint arXiv:1905.11806.
@@ -229,7 +229,7 @@
 								</div>
 							</div>
 							<div class="row my-section-content-element">
-								<div class="col-sm-2 col-4 text-center"><a href="http://ceur-ws.org/Vol-2244/paper_11.pdf" target="_blank" class="my-section-content-pdf"><i class="fas fa-download"></i> <b>.pdf</b></a></div>
+								<div class="col-sm-2 col-4 text-center" data-tilt><a href="http://ceur-ws.org/Vol-2244/paper_11.pdf" target="_blank" class="my-section-content-pdf"><i class="fas fa-download"></i> <b>.pdf</b></a></div>
 								<div class="col-sm-10 col-8">
 									<div class="my-section-content-second text-justify">
 										Coman, A. C., Zara, G., Nechaev, Y., Barlacchi, G., & Moschitti, A. (2018). <i>Exploiting Deep Neural Networks for Tweet-based Emoji Prediction</i>. In International Workshop on Semantic Evaluation (Vol. 4, p. 1).
@@ -237,7 +237,7 @@
 								</div>
 							</div>
 							<div class="row my-section-content-element">
-								<div class="col-sm-2 col-4 text-center"><a href="http://ceur-ws.org/Vol-2263/paper021.pdf" target="_blank" class="my-section-content-pdf"><i class="fas fa-download"></i> <b>.pdf</b></a></div>
+								<div class="col-sm-2 col-4 text-center" data-tilt><a href="http://ceur-ws.org/Vol-2263/paper021.pdf" target="_blank" class="my-section-content-pdf"><i class="fas fa-download"></i> <b>.pdf</b></a></div>
 								<div class="col-sm-10 col-8">
 									<div class="my-section-content-second text-justify">
 										Coman, A. C., Nechaev, Y., & Zara, G. (2018). <i>Predicting Emoji Exploiting Multimodal Data: FBK Participation in ITAmoji Task</i>. In EVALITA 2018 Sixth Evaluation Campaign of Natural Language Processing and Speech Tools for Italian.
@@ -259,6 +259,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 		<!-- script -->
-		<script src="js/script.js"></script>
+		<script type="text/javascript" src="js/script.js"></script>
+		<script type="text/javascript" src="js/vanilla-tilt.min.js"></script>
 	</body>
 </html>
