add support for mobile

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 	<body>
 		<div class="container">
 			<div class="row">
-				<div class="col-9 offset-3">
+				<div class="col-sm-9 offset-sm-3 col-12">
 					<hr class="my-hr">					
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-3">
+				<div class="col-sm-3 col-12">
 					<div class="row">
 						<img src="res/andrei.jpg" class="rounded-circle img-fluid mx-auto d-block my-image">
 					</div>
 				</div>
-				<div class="col-9">
+				<div class="col-sm-9 col-12">
 					<div class="row">
 						<div class="col-12 my-name">
 							ANDREI CATALIN COMAN
@@ -41,29 +41,29 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-12 my-social">
+						<div class="col-sm-12 col-3 my-social">
 							<a href="https://twitter.com/AndreiCComan" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
 						</div>
-						<div class="col-12 my-social">
+						<div class="col-sm-12 col-3 my-social">
 							<a href="https://www.linkedin.com/in/andrei-catalin-coman-226026137/" target="_blank"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
 						</div>
-						<div class="col-12 my-social">
+						<div class="col-sm-12 col-3 my-social">
 							<a href="http://github.com/AndreiCComan/" target="_blank"><i class="fab fa-github"></i> GitHub</a>
 						</div>
-						<div class="col-12 my-social">
+						<div class="col-sm-12 col-3 my-social">
 							<a href="https://scholar.google.it/citations?user=LZLaA4cAAAAJ&hl=it&oi=ao" target="_blank"><i class="fab fa-google"></i> Scholar</a>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-1">
+				<div class="col-sm-1 col-12">
 					<hr class="my-hr">	
 					<div class="my-section-title text-left">
 						Interests
 					</div>
 				</div>
-				<div class="col-9 offset-2">
+				<div class="col-sm-9 offset-sm-2 col-12">
 					<hr class="my-hr">
 					<div class="my-section-content text-justify">
 						Natural Language Processing, Conversational Agents, Deep Learning, Machine Learning, Big Data, and Data Analysis.
@@ -71,19 +71,19 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-1">
+				<div class="col-sm-1 col-12">
 					<hr class="my-hr">
 					<div class="my-section-title text-left">
 						Education
 					</div>	
 				</div>
-				<div class="col-9 offset-2">
+				<div class="col-sm-9 offset-sm-2 col-12">
 					<hr class="my-hr">
 					<div class="row">
-						<div class="col-2">
+						<div class="col-sm-2 col-3">
 							<img src="res/unitn.png" class="rounded img-fluid my-section-content-image">
 						</div>
-						<div class="col-10">
+						<div class="col-sm-10 col-9">
 							<div class="row">
 								<span><span class="my-section-content-title">University of Trento / </span>Master of Science</span>
 							</div>
@@ -103,10 +103,10 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-2">
+						<div class="col-sm-2 col-3">
 							<img src="res/unitn.png" class="rounded img-fluid my-section-content-image">
 						</div>
-						<div class="col-10">
+						<div class="col-sm-10 col-9">
 							<div class="row">
 								<span><span class="my-section-content-title">University of Trento / </span>Bachelor of Science</span>
 							</div>
@@ -128,19 +128,19 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-1">
+				<div class="col-sm-1 col-12">
 					<hr class="my-hr">
 					<div class="my-section-title text-left">
 						Experience
 					</div>	
 				</div>
-				<div class="col-9 offset-2">
+				<div class="col-sm-9 offset-sm-2 col-12">
 					<hr class="my-hr">
 					<div class="row">
-						<div class="col-2">
+						<div class="col-sm-2 col-3">
 							<img src="res/unitn.png" class="rounded img-fluid my-section-content-image">
 						</div>
-						<div class="col-10">
+						<div class="col-sm-10 col-9">
 							<div class="row">
 								<span><span class="my-section-content-title">University of Trento / </span>Research Fellow (SiS Lab)</span>
 							</div>
@@ -155,10 +155,10 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-2">
+						<div class="col-sm-2 col-3">
 							<img src="res/unitn.png" class="rounded img-fluid my-section-content-image">
 						</div>
-						<div class="col-10">
+						<div class="col-sm-10 col-9">
 							<div class="row">
 								<span><span class="my-section-content-title">University of Trento / </span>Thesis (SiS Lab)</span>
 							</div>
@@ -177,10 +177,10 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-2">
+						<div class="col-sm-2 col-3">
 							<img src="res/unitn.png" class="rounded img-fluid my-section-content-image">
 						</div>
-						<div class="col-10">
+						<div class="col-sm-10 col-9">
 							<div class="row">
 								<span><span class="my-section-content-title">University of Trento / </span>SiS Lab</span>
 							</div>
@@ -195,10 +195,10 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-2">
+						<div class="col-sm-2 col-3">
 							<img src="res/naist.png" class="rounded img-fluid my-section-content-image">
 						</div>
-						<div class="col-10">
+						<div class="col-sm-10 col-9">
 							<div class="row">
 								<span><span class="my-section-content-title">NAIST / </span>Internship (AHC Lab)</span>
 							</div>
@@ -213,10 +213,10 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-2">
+						<div class="col-sm-2 col-3">
 							<img src="res/fbk.jpg" class="rounded img-fluid my-section-content-image">
 						</div>
-						<div class="col-10">
+						<div class="col-sm-10 col-9">
 							<div class="row">
 								<span><span class="my-section-content-title">FBK / </span>Part-Time Technologist  (eHealth Lab)</span>
 							</div>
@@ -231,10 +231,10 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-2">
+						<div class="col-sm-2 col-3">
 							<img src="res/unitn.png" class="rounded img-fluid my-section-content-image">
 						</div>
-						<div class="col-10">
+						<div class="col-sm-10 col-9">
 							<div class="row">
 								<span><span class="my-section-content-title">University of Trento / </span>Group Project</span>
 							</div>
@@ -254,10 +254,10 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-2">
+						<div class="col-sm-2 col-3">
 							<img src="res/unitn.png" class="rounded img-fluid my-section-content-image">
 						</div>
-						<div class="col-10">
+						<div class="col-sm-10 col-9">
 							<div class="row">
 								<span><span class="my-section-content-title">University of Trento / </span>Group Project</span>
 							</div>
@@ -277,10 +277,10 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-2">
+						<div class="col-sm-2 col-3">
 							<img src="res/fbk.jpg" class="rounded img-fluid my-section-content-image">
 						</div>
-						<div class="col-10">
+						<div class="col-sm-10 col-9">
 							<div class="row">
 								<span><span class="my-section-content-title">FBK / </span>Thesis (Future Media Lab)</span>
 							</div>
@@ -300,10 +300,10 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-2">
+						<div class="col-sm-2 col-3">
 							<img src="res/fbk.jpg" class="rounded img-fluid my-section-content-image">
 						</div>
-						<div class="col-10">
+						<div class="col-sm-10 col-9">
 							<div class="row">
 								<span><span class="my-section-content-title">FBK / </span>Internship (Future Media Lab)</span>
 							</div>
@@ -320,19 +320,19 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-1">
+				<div class="col-sm-1 col-12">
 					<hr class="my-hr">
 					<div class="my-section-title text-left">
 						Pubblications
 					</div>	
 				</div>
-				<div class="col-9 offset-2">
+				<div class="col-sm-9 offset-sm-2 col-12">
 					<hr class="my-hr">
 					<div class="row">
-						<div class="col-2">
+						<div class="col-sm-2 col-3">
 							<a href="https://www.isca-speech.org/archive/Interspeech_2019/pdfs/1826.pdf" target="_blank">.pdf</a>
 						</div>
-						<div class="col-10">
+						<div class="col-sm-10 col-9">
 							<div class="row">
 								<p>
 									Coman, A.C., Yoshino, K., Murase, Y., Nakamura, S., Riccardi, G. (2019) <i>An Incremental Turn-Taking Model for Task-Oriented Dialog Systems</i>. Proc. Interspeech 2019, 4155-4159, DOI: 10.21437/Interspeech.2019-1826.
@@ -341,10 +341,10 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-2">
+						<div class="col-sm-2 col-3">
 							<a href="http://ceur-ws.org/Vol-2263/paper021.pdf" target="_blank">.pdf</a>
 						</div>
-						<div class="col-10">
+						<div class="col-sm-10 col-9">
 							<div class="row">
 								<p>
 									Coman, A. C., Nechaev, Y., & Zara, G. (2018). <i>Predicting Emoji Exploiting Multimodal Data: FBK Participation in ITAmoji Task</i>. In EVALITA 2018 Sixth Evaluation Campaign of Natural Language Processing and Speech Tools for Italian. 
@@ -353,10 +353,10 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-2">
+						<div class="col-sm-2 col-3">
 							<a href="http://ceur-ws.org/Vol-2244/paper_11.pdf" target="_blank">.pdf</a>
 						</div>
-						<div class="col-10">
+						<div class="col-sm-10 col-9">
 							<div class="row">
 								<p>
 									Coman, A. C., Zara, G., Nechaev, Y., Barlacchi, G., & Moschitti, A. (2018). <i>Exploiting Deep Neural Networks for Tweet-based Emoji Prediction</i>. In International Workshop on Semantic Evaluation (Vol. 4, p. 1).
@@ -367,19 +367,19 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-1">
+				<div class="col-sm-1 col-12">
 					<hr class="my-hr">
 					<div class="my-section-title text-left">
 						Certificates
 					</div>	
 				</div>
-				<div class="col-9 offset-2">
+				<div class="col-sm-9 offset-sm-2 col-12">
 					<hr class="my-hr">
 					<div class="row">
-						<div class="col-2">
+						<div class="col-sm-2 col-3">
 							<img src="res/coursera.png" class="rounded img-fluid my-section-content-image">
 						</div>
-						<div class="col-10">
+						<div class="col-sm-10 col-9">
 							<div class="row">
 								<span><span class="my-section-content-title">Deep Learning Specialization / </span>Coursera</span>
 							</div>
@@ -393,10 +393,10 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-2">
+						<div class="col-sm-2 col-3">
 							<img src="res/coursera.png" class="rounded img-fluid my-section-content-image">
 						</div>
-						<div class="col-10">
+						<div class="col-sm-10 col-9">
 							<div class="row">
 								<span><span class="my-section-content-title">Machine Learning / </span>Coursera</span>
 							</div>
@@ -410,10 +410,10 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-2">
+						<div class="col-sm-2 col-3">
 							<img src="res/british_council.png" class="rounded img-fluid my-section-content-image">
 						</div>
-						<div class="col-10">
+						<div class="col-sm-10 col-9">
 							<div class="row">
 								<span><span class="my-section-content-title">IELTS 7.5 / </span>British Council</span>
 							</div>
@@ -429,19 +429,19 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-1">
+				<div class="col-sm-1 col-12">
 					<hr class="my-hr">
 					<div class="my-section-title text-left">
 						Languages
 					</div>	
 				</div>
-				<div class="col-9 offset-2">
+				<div class="col-sm-9 offset-sm-2 col-12">
 					<hr class="my-hr">
 					<div class="row">
-						<div class="col-2">
+						<div class="col-sm-2 col-3">
 							<img src="res/united_kingdom.png" class="rounded img-fluid my-section-content-image">
 						</div>
-						<div class="col-10">
+						<div class="col-sm-10 col-9">
 							<div class="row">
 								<span><span class="my-section-content-title">English</span>
 							</div>
@@ -455,10 +455,10 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-2">
+						<div class="col-sm-2 col-3">
 							<img src="res/italy.png" class="rounded img-fluid my-section-content-image">
 						</div>
-						<div class="col-10">
+						<div class="col-sm-10 col-9">
 							<div class="row">
 								<span><span class="my-section-content-title">Italian</span>
 							</div>
@@ -472,10 +472,10 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-2">
+						<div class="col-sm-2 col-3">
 							<img src="res/romania.png" class="rounded img-fluid my-section-content-image">
 						</div>
-						<div class="col-10">
+						<div class="col-sm-10 col-9">
 							<div class="row">
 								<span><span class="my-section-content-title">Romanian</span>
 							</div>
@@ -491,19 +491,19 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-1">
+				<div class="col-sm-1 col-12">
 					<hr class="my-hr">
 					<div class="my-section-title text-left">
 						Free time
 					</div>	
 				</div>
-				<div class="col-9 offset-2">
+				<div class="col-sm-9 offset-sm-2 col-12">
 					<hr class="my-hr">
 					<div class="row">
-						<div class="col-2">
+						<div class="col-sm-2 col-3">
 							<img src="res/running.png" class="rounded img-fluid my-section-content-image">
 						</div>
-						<div class="col-10">
+						<div class="col-sm-10 col-9">
 							<div class="row">
 								<span><span class="my-section-content-title">Running</span>
 							</div>
@@ -517,10 +517,10 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-2">
+						<div class="col-sm-2 col-3">
 							<img src="res/reading.png" class="rounded img-fluid my-section-content-image">
 						</div>
-						<div class="col-10">
+						<div class="col-sm-10 col-9">
 							<div class="row">
 								<span><span class="my-section-content-title">Reading</span>
 							</div>
@@ -534,10 +534,10 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-2">
+						<div class="col-sm-2 col-3">
 							<img src="res/music.png" class="rounded img-fluid my-section-content-image">
 						</div>
-						<div class="col-10">
+						<div class="col-sm-10 col-9">
 							<div class="row">
 								<span><span class="my-section-content-title">Music</span>
 							</div>
