--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 				<div class="col-sm-1 col-12">
 					<hr class="my-hr">
 					<div class="my-section-title text-left">
-						Pubblications
+						Publications
 					</div>	
 				</div>
 				<div class="col-sm-9 offset-sm-2 col-12">
