--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 							</div>
 							<div class="row">
 								<p>
-									GPA: 110 / 110 (cum laude)
+									GPA: 110 / 110 (magna cum laude)
 								</p>
 							</div>
 						</div>
