--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 							</div>
 							<div class="row">
 								<p>
-									We processed and analysed tweets finalized to detection of topics and relations as part of the Big Data and Data Mining course projects
+									We processed and analysed tweets finalized to the detection of topics as part of the Big Data and Data Mining course projects
 								</p>
 								</div>
 							<div class="row">
